[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "google_forms_toolkit"
version = "0.1.0"
description = "Automate google forms"
authors = [
    {name = "Piotr Ginał"}
]
requires-python = ">=3.9"
dynamic = ["dependencies", "optional-dependencies"]

[project.scripts]
spamform = "google_forms_toolkit.spammers.threaded:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.dynamic]
dependencies = { file = "requirements/base.txt" }

[tool.ruff]
lint.select = ["ALL", "E302"]
line-length=120
lint.ignore = [
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D107",
    "D401",
    "D404",
    "D417",
    "N818",
    "D213",  # ignore rules causing conflicts
    "D211",
    "S311",
    "FIX002",
    "TD003",
    "CPY001",
    "FA100",
]
preview = true
